@@ -13,15 +13,11 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-import com.emmsale.feed.application.dto.FeedDetailResponse;
-import com.emmsale.feed.application.dto.FeedDetailResponse.WriterProfileResponse;
-import com.emmsale.feed.application.dto.FeedListResponse;
-import com.emmsale.feed.application.dto.FeedSimpleResponse;
+import com.emmsale.feed.application.dto.FeedResponseRefactor;
 import com.emmsale.feed.application.dto.FeedUpdateRequest;
 import com.emmsale.feed.application.dto.FeedUpdateResponse;
-import java.time.LocalDate;
+import com.emmsale.member.application.dto.MemberReferenceResponse;
 import java.time.LocalDateTime;
-import java.time.LocalTime;
 import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.DisplayName;
@@ -36,34 +32,53 @@ import org.springframework.test.web.servlet.request.MockMultipartHttpServletRequ
 
 class FeedApiTest extends MockMvcTestHelper {
 
+  private static final MemberReferenceResponse MEMBER_REFERENCE_RESPONSE = new MemberReferenceResponse(
+      2L,
+      "멤버",
+      "멤버 설명",
+      "멤버 이미지url",
+      "멤버 깃허브 url"
+  );
+  private static final ResponseFieldsSnippet FEEDS_RESPONSE_FIELDS = responseFields(
+      fieldWithPath("[].id").type(JsonFieldType.NUMBER).description("피드 id"),
+      fieldWithPath("[].eventId").type(JsonFieldType.NUMBER).description("피드가 작성된 부모 이벤트 id"),
+      fieldWithPath("[].title").type(JsonFieldType.STRING).description("피드 제목"),
+      fieldWithPath("[].content").type(JsonFieldType.STRING).description("피드 내용"),
+      fieldWithPath("[].images").type(JsonFieldType.ARRAY).description("피드 이미지 url 리스트"),
+      fieldWithPath("[].writer.id").type(JsonFieldType.NUMBER).description("writer의 식별자"),
+      fieldWithPath("[].writer.name").type(JsonFieldType.STRING).description("writer의 이름"),
+      fieldWithPath("[].writer.description").type(JsonFieldType.STRING)
+          .description("writer의 한줄 자기소개"),
+      fieldWithPath("[].writer.imageUrl").type(JsonFieldType.STRING)
+          .description("writer의 이미지 url"),
+      fieldWithPath("[].writer.githubUrl").type(JsonFieldType.STRING)
+          .description("writer의 github Url"),
+      fieldWithPath("[].commentCount").type(JsonFieldType.NUMBER).description("피드의 댓글 개수"),
+      fieldWithPath("[].createdAt").type(JsonFieldType.STRING).description("피드 생성 일시"),
+      fieldWithPath("[].updatedAt").type(JsonFieldType.STRING).description("피드 업데이트 일시")
+  );
+
   @Test
   @DisplayName("이벤트의 피드 목록을 성공적으로 반환하면 200 OK를 반환한다.")
   void findAllFeedsTest() throws Exception {
     //given
-    final ResponseFieldsSnippet responseFields = responseFields(
-        fieldWithPath("eventId").type(JsonFieldType.NUMBER).description("피드가 작성된 부모 이벤트 id"),
-        fieldWithPath("feeds").type(JsonFieldType.ARRAY).description("피드 리스트"),
-        fieldWithPath("feeds[].id").type(JsonFieldType.NUMBER).description("피드 id"),
-        fieldWithPath("feeds[].title").type(JsonFieldType.STRING).description("피드 제목"),
-        fieldWithPath("feeds[].content").type(JsonFieldType.STRING).description("피드 내용"),
-        fieldWithPath("feeds[].images").type(JsonFieldType.ARRAY).description("피드 이미지 url 리스트"),
-        fieldWithPath("feeds[].writerId").type(JsonFieldType.NUMBER).description("피드 작성자 id"),
-        fieldWithPath("feeds[].commentCount").type(JsonFieldType.NUMBER).description("피드의 댓글 개수"),
-        fieldWithPath("feeds[].createdAt").type(JsonFieldType.STRING).description("피드 생성 일시"),
-        fieldWithPath("feeds[].updatedAt").type(JsonFieldType.STRING).description("피드 업데이트 일시")
-    );
-
     final long eventId = 11L;
-    final List<FeedSimpleResponse> feeds = List.of(
-        new FeedSimpleResponse(34L, "피드1 제목", "피드 내용", 23L,
-            List.of("https://image1.url", "https://image2.url"), 0L,
-            LocalDateTime.of(LocalDate.of(2023, 7, 13), LocalTime.of(11, 43, 11)),
-            LocalDateTime.of(LocalDate.of(2023, 7, 13), LocalTime.of(11, 43, 11))),
-        new FeedSimpleResponse(35L, "피드2 제목", "피드 내용", 43L, Collections.emptyList(), 3L,
-            LocalDateTime.of(LocalDate.of(2023, 7, 22), LocalTime.of(23, 54, 49)),
-            LocalDateTime.of(LocalDate.of(2023, 7, 22), LocalTime.of(23, 54, 49)))
+    final List<FeedResponseRefactor> response = List.of(
+        new FeedResponseRefactor(
+            34L, eventId, "피드 1 제목", "피드 1 내용",
+            MEMBER_REFERENCE_RESPONSE,
+            Collections.emptyList(),
+            2L,
+            LocalDateTime.of(2023, 7, 13, 0, 0), LocalDateTime.of(2023, 7, 13, 0, 0)
+        ),
+        new FeedResponseRefactor(
+            35L, eventId, "피드 2 제목", "피드 2 내용",
+            MEMBER_REFERENCE_RESPONSE,
+            Collections.emptyList(),
+            2L,
+            LocalDateTime.of(2023, 7, 13, 0, 0), LocalDateTime.of(2023, 7, 13, 0, 0)
+        )
     );
-    final FeedListResponse response = new FeedListResponse(eventId, feeds);
 
     when(feedQueryService.findAllFeeds(any(), any())).thenReturn(response);
 
@@ -72,7 +87,7 @@ class FeedApiTest extends MockMvcTestHelper {
             .param("event-id", String.valueOf(eventId)))
         .andExpect(status().isOk())
         .andDo(print())
-        .andDo(document("find-all-feed", responseFields));
+        .andDo(document("find-all-feed", FEEDS_RESPONSE_FIELDS));
   }
 
   @Test
@@ -81,26 +96,33 @@ class FeedApiTest extends MockMvcTestHelper {
     //given
     final ResponseFieldsSnippet responseFields = responseFields(
         fieldWithPath("id").type(JsonFieldType.NUMBER).description("피드 id"),
-        fieldWithPath("eventId").type(JsonFieldType.NUMBER).description("이벤트 id"),
-        fieldWithPath("writer").type(JsonFieldType.OBJECT).description("작성자"),
-        fieldWithPath("writer.memberId").type(JsonFieldType.NUMBER).description("작성자 id"),
-        fieldWithPath("writer.name").type(JsonFieldType.STRING).description("작성자명"),
-        fieldWithPath("writer.imageUrl").type(JsonFieldType.STRING).description("작성자 이미지 url"),
+        fieldWithPath("eventId").type(JsonFieldType.NUMBER).description("피드가 작성된 부모 이벤트 id"),
         fieldWithPath("title").type(JsonFieldType.STRING).description("피드 제목"),
         fieldWithPath("content").type(JsonFieldType.STRING).description("피드 내용"),
         fieldWithPath("images").type(JsonFieldType.ARRAY).description("피드 이미지 url 리스트"),
+        fieldWithPath("writer.id").type(JsonFieldType.NUMBER).description("writer의 식별자"),
+        fieldWithPath("writer.name").type(JsonFieldType.STRING).description("writer의 이름"),
+        fieldWithPath("writer.description").type(JsonFieldType.STRING)
+            .description("writer의 한줄 자기소개"),
+        fieldWithPath("writer.imageUrl").type(JsonFieldType.STRING)
+            .description("writer의 이미지 url"),
+        fieldWithPath("writer.githubUrl").type(JsonFieldType.STRING)
+            .description("writer의 github Url"),
+        fieldWithPath("commentCount").type(JsonFieldType.NUMBER).description("피드의 댓글 개수"),
         fieldWithPath("createdAt").type(JsonFieldType.STRING).description("피드 생성 일시"),
         fieldWithPath("updatedAt").type(JsonFieldType.STRING).description("피드 업데이트 일시")
     );
-
     final long eventId = 11L;
     final long feedId = 34L;
-    final WriterProfileResponse writer = new WriterProfileResponse(8L, "작성자명",
-        "https://member-image.com");
-    final FeedDetailResponse response = new FeedDetailResponse(feedId, eventId, writer, "피드 제목",
-        "피드 상세 내용", List.of("https://image1.url", "https://image2.url"),
-        LocalDateTime.of(LocalDate.of(2023, 7, 22), LocalTime.of(23, 54, 49)),
-        LocalDateTime.of(LocalDate.of(2023, 7, 22), LocalTime.of(23, 54, 49)));
+
+    final FeedResponseRefactor response =
+        new FeedResponseRefactor(
+            34L, eventId, "피드 1 제목", "피드 1 내용",
+            MEMBER_REFERENCE_RESPONSE,
+            Collections.emptyList(),
+            2L,
+            LocalDateTime.of(2023, 7, 13, 0, 0), LocalDateTime.of(2023, 7, 13, 0, 0)
+        );
 
     when(feedQueryService.findFeed(any(), any())).thenReturn(response);
 
@@ -115,35 +137,31 @@ class FeedApiTest extends MockMvcTestHelper {
   @DisplayName("자신의 피드 목록을 성공적으로 반환하면 200 OK를 반환한다.")
   void findAllMyFeedsTest() throws Exception {
     //given
-    final ResponseFieldsSnippet responseFields = responseFields(
-        fieldWithPath("[].id").type(JsonFieldType.NUMBER).description("피드 id"),
-        fieldWithPath("[].title").type(JsonFieldType.STRING).description("피드 제목"),
-        fieldWithPath("[].content").type(JsonFieldType.STRING).description("피드 내용"),
-        fieldWithPath("[].images").type(JsonFieldType.ARRAY).description("피드 이미지 url 리스트"),
-        fieldWithPath("[].writerId").type(JsonFieldType.NUMBER).description("피드 작성자 id"),
-        fieldWithPath("[].commentCount").type(JsonFieldType.NUMBER).description("피드의 댓글 개수"),
-        fieldWithPath("[].createdAt").type(JsonFieldType.STRING).description("피드 생성 일시"),
-        fieldWithPath("[].updatedAt").type(JsonFieldType.STRING).description("피드 업데이트 일시")
+    final List<FeedResponseRefactor> responses = List.of(
+        new FeedResponseRefactor(
+            34L, 2L, "피드 1 제목", "피드 1 내용",
+            MEMBER_REFERENCE_RESPONSE,
+            Collections.emptyList(),
+            2L,
+            LocalDateTime.of(2023, 7, 13, 0, 0), LocalDateTime.of(2023, 7, 13, 0, 0)
+        ),
+        new FeedResponseRefactor(
+            35L, 2L, "피드 2 제목", "피드 2 내용",
+            MEMBER_REFERENCE_RESPONSE,
+            Collections.emptyList(),
+            2L,
+            LocalDateTime.of(2023, 7, 13, 0, 0), LocalDateTime.of(2023, 7, 13, 0, 0)
+        )
     );
 
-    final List<FeedSimpleResponse> feeds = List.of(
-        new FeedSimpleResponse(34L, "피드1 제목", "피드 내용", 23L,
-            List.of("https://image1.url", "https://image2.url"), 0L,
-            LocalDateTime.of(LocalDate.of(2023, 7, 13), LocalTime.of(11, 43, 11)),
-            LocalDateTime.of(LocalDate.of(2023, 7, 13), LocalTime.of(11, 43, 11))),
-        new FeedSimpleResponse(35L, "피드2 제목", "피드 내용", 43L, Collections.emptyList(), 3L,
-            LocalDateTime.of(LocalDate.of(2023, 7, 22), LocalTime.of(23, 54, 49)),
-            LocalDateTime.of(LocalDate.of(2023, 7, 22), LocalTime.of(23, 54, 49)))
-    );
-
-    when(feedQueryService.findAllMyFeeds(any())).thenReturn(feeds);
+    when(feedQueryService.findAllMyFeeds(any())).thenReturn(responses);
 
     //when & then
     mockMvc.perform(get("/feeds/my")
             .header(HttpHeaders.AUTHORIZATION, "Bearer accessToken"))
         .andExpect(status().isOk())
         .andDo(print())
-        .andDo(document("find-all-my-feed", responseFields));
+        .andDo(document("find-all-my-feed", FEEDS_RESPONSE_FIELDS));
   }
 
   @Test
